# Kkoggiyo-server

./: .gitignore  PORTFOLIO_README.md  README.md  env.example  issue tracker.md  portfolio_tcp_server_metrics.md  나를읽어주세요제발.md
img-server/: ReadMe.md  db.py  main.py  schemas.py  start.sh  서버여는법.txt
img-server/routers/: menu_image.py
img-server/services/: image_service.py
tcp-server/: CMakeLists.txt  ReadMe.md
tcp-server/clients/: HttpClient.cpp  HttpClient.hpp  NetClient.cpp  NetClient.hpp  admin_client.cpp  boss_client.cpp  rider_client.cpp  user_client.cpp
tcp-server/include/: DBConnectionPool.h  DBHelper.hpp  PacketHandler.hpp  SessionManager.hpp  protocol.hpp
tcp-server/include/handlers/: AdminHandler.hpp  AuthHandler.hpp  ChatHandler.hpp  ClientHandler.hpp  MenuHandler.hpp  OrderHandler.hpp  StoreHandler.hpp
tcp-server/include/net/: ConnectionManager.hpp  ConnectionState.hpp  SocketIO.hpp
tcp-server/include/repo/: IUserRepository.hpp  InMemoryUserRepository.hpp
tcp-server/include/router/: MessageRouter.hpp
tcp-server/include/services/: AdminAuthService.hpp  AdminService.hpp  BossAuthService.hpp  ClientService.hpp  CustomerAuthService.hpp  MenuService.hpp  NotifyService.hpp  OrderService.hpp  RiderAuthService.hpp  StoreService.hpp
tcp-server/include/thread/: WorkQueue.hpp
tcp-server/include/usecase/: AcceptOrderUseCase.hpp  CancelOrderUseCase.hpp  PlaceOrderUseCase.hpp  SearchHistoryUseCase.hpp  SearchUserUseCase.hpp  UpdateStatusUseCase.hpp
tcp-server/src/: DBConnectionPool.cpp  DBHelper.cpp  PacketHandler.cpp  SessionManager.cpp  server.cpp  start.sh
tcp-server/src/handlers/: AdminHandler.cpp  AuthHandler.cpp  ChatHandler.cpp  ClientHandler.cpp  MenuHandler.cpp  OrderHandler.cpp  StoreHandler.cpp
tcp-server/src/net/: ConnectionManager.cpp  SocketIO.cpp
tcp-server/src/repo/: InMemoryUserRepository.cpp
tcp-server/src/router/: MessageRouter.cpp
tcp-server/src/services/: AdminAuthService.cpp  AdminService.cpp  BossAuthService.cpp  ClientService.cpp  CustomerAuthService.cpp  MenuService.cpp  NotifyService.cpp  OrderService.cpp  RiderAuthService.cpp  StoreService.cpp
tcp-server/src/thread/: WorkQueue.cpp
tcp-server/src/usecase/: AcceptOrderUseCase.cpp  CancelOrderUseCase.cpp  PlaceOrderUseCase.cpp  SearchHistoryUseCase.cpp  SearchUserUseCase.cpp  UpdateStatusUseCase.cpp
